--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     </section>
     <section class="testimonials" id="testimonials">
         <div class="title white">
-            <h2 class="titleText">The <span>S</span>aid About Us</h2>
+            <h2 class="titleText"><span>T</span>estimoniales</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
         <div class="content">
