--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 </div>
                 <div class="text">
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellat facere perspiciatis ab amet corporis vel rerum voluptatum suscipit natus magni, officiis unde voluptatibus quam aspernatur quas cumque, ipsam, minus dolore?</p>
-                    <h3>Someone Famous</h3>
+                    <h3>Nahomy Contreras</h3>
                 </div>
             </div>
             <div class="box">
@@ -144,7 +144,7 @@
                 </div>
                 <div class="text">
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellat facere perspiciatis ab amet corporis vel rerum voluptatum suscipit natus magni, officiis unde voluptatibus quam aspernatur quas cumque, ipsam, minus dolore?</p>
-                    <h3>Someone Famous</h3>
+                    <h3>Luis Torres</h3>
                 </div>
             </div>
             <div class="box">
@@ -153,7 +153,7 @@
                 </div>
                 <div class="text">
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellat facere perspiciatis ab amet corporis vel rerum voluptatum suscipit natus magni, officiis unde voluptatibus quam aspernatur quas cumque, ipsam, minus dolore?</p>
-                    <h3>Someone Famous</h3>
+                    <h3>Andrea Sanchez</h3>
                 </div>
             </div>
         </div>
