--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
             <div class="col50">
                 <div class="imgBx">
-                    <img src="img/img1.1.svg" alt="imagen">
+                    <img src="img/img1.1.jpg" alt="imagen">
                 </div>
             </div>
         </div>
@@ -55,7 +55,7 @@
         <div class="content">
             <div class="box">
                 <div class="imgBx">
-                    <img src="img/Nigiris.svg" alt="Nigiris">
+                    <img src="img/Nigiris.jpg" alt="Nigiris">
                 </div>
                 <div class="text">
                     <h3>Nigiris</h3>
@@ -63,7 +63,7 @@
             </div>
             <div class="box">
                 <div class="imgBx">
-                    <img src="img/Temaki.svg" alt="Temaki">
+                    <img src="img/Temaki.jpg" alt="Temaki">
                 </div>
                 <div class="text">
                     <h3>Temaki</h3>
@@ -71,7 +71,7 @@
             </div>
             <div class="box">
                 <div class="imgBx">
-                    <img src="img/roll_saltado.svg" alt="Roll_Saltado">
+                    <img src="img/roll_saltado.jpg" alt="Roll_Saltado">
                 </div>
                 <div class="text">
                     <h3>Roll Saltado</h3>
@@ -87,7 +87,7 @@
             </div>
             <div class="box">
                 <div class="imgBx">
-                    <img src="img/roll_salmon.svg" alt="Roll Salmon">
+                    <img src="img/roll_salmon.jpg" alt="Roll Salmon">
                 </div>
                 <div class="text">
                     <h3>Roll Salmon</h3>
